# rome

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: download.py  evalplus_analysis.py  evalplus_evaluator.py  evalplus_kb_agent.py  evalplus_multi_agent.py  evalplus_single_agent.py  humaneval_single_agent.py  kb_server_cli.py  test_executor.py  test_fsm.py  test_single_agent.py
benchmark/config/: 8_3_evolved_roles.json  minimal_roles.json  multi_agent_evolved.yaml  multi_agent_insight.yaml  multi_agent_insight_query.yaml  multi_agent_query.yaml  single_agent_algo.yaml  single_agent_basic.yaml  single_agent_fancy.yaml  single_agent_fsm.yaml  single_agent_fsm_inter.yaml  single_agent_insight.yaml  single_agent_query.yaml  single_agent_refactor.yaml  single_agent_test.yaml
benchmark/result/: download.py
benchmark/role_config/: 8_3_evolved_roles.json  minimal_roles.json  minimal_roles2.json
caesar/: CLAUDE.md  README.md  artifact_synthesis.py  brave_search.py  caesar_agent.py  caesar_config.py  run_agent.py
caesar/analysis/: judge_analysis.py  llm_as_judge.py  prepare_artifact.py  transfer_configs.py
caesar/config/: batch_test.jsonl  batch_test.yaml  single_agent_test.yaml
caesar/config/config_agi/: improve_transformer.yaml  intelligence_bottleneck.yaml  single_agent_agi.yaml  solve_arcagi.yaml
caesar/config/config_creative/: constrained_creativity.yaml  counterfactual_reasoning.yaml  crossdomain_synthesis.yaml  meta_creativity.yaml  openended_creativity.yaml
caesar/config/config_preset/: mini.yaml  nano.yaml  regular.yaml
caesar/config/config_test/: batch_test.yaml  single_agent_test.yaml
caesar/config/config_wikipedia/: single_agent_ai.yaml  single_agent_evo.yaml  single_agent_sci.yaml
caesar/config/creative/: constrained_creativity.yaml  counterfactual_reasoning.yaml  crossdomain_synthesis.yaml  meta_creativity.yaml  openended_creativity.yaml
caesar/config/creative2/: constrained_creativity.yaml  counterfactual_reasoning.yaml  crossdomain_synthesis.yaml  meta_creativity.yaml  openended_creativity.yaml
caesar/config/creative3/: constrained_creativity.yaml  counterfactual_reasoning.yaml  crossdomain_synthesis.yaml  meta_creativity.yaml  openended_creativity.yaml
caesar/config/creative_agi/: improve_transformer.yaml  intelligence_bottleneck.yaml  single_agent_agi.yaml  solve_arcagi.yaml
caesar/config/creative_ai/: intelligence_bottleneck.yaml  single_agent_agi.yaml
caesar/config/custom_role/: self_transcend_insights_v1.txt
caesar/config/llm_as_judge/human_prompts/: human_eval_prompt.txt
caesar/config/llm_as_judge/llm_prompts/: eli5_prompt_short.txt  judge_csv_prompt.txt  nus_rubric_10pt_api.txt
caesar/config/llm_as_judge/prompts/: human_eval_prompt.txt  human_eval_prompt2.txt  judge_summary_prompt.txt  nus_rubric_10pt_old.txt  queries_n50.json  query_prompt_shallow.txt
caesar/config/llm_as_judge/queries/: queries_n50.jsonl
caesar/config/role/: self_transcend_insights_v2.txt  self_transcend_insights_v3.txt
caesar/config/wikipedia/: single_agent_ai.yaml  single_agent_sci.yaml
ecology/: artifact_analysis.py  artifact_synthesis.py  brave_search.py  caesar_agent.py  caesar_answer.txt  caesar_config.py  judge_analysis.py  judge_summary.py  llm_as_judge.py  llm_judge.py  prepare_artifact.py  run_agent.py
ecology/analysis/: judge_analysis.py  llm_as_judge.py  prepare_artifact.py
ecology/config/: role_insights.txt  self_transcendence.txt  single_agent.yaml  single_agent2.yaml  single_agent3.yaml  single_agent_agi.yaml  single_agent_ai.yaml  single_agent_evo.yaml  single_agent_sci.yaml  single_agent_test.yaml
ecology/config/arc_agi/: single_agent_agi.yaml
ecology/config/creative/: constrained_creativity.yaml  counterfactual_reasoning.yaml  crossdomain_synthesis.yaml  improve_transformer.yaml  intelligence_bottleneck.yaml  meta_creativity.yaml  openended_creativity.yaml  solve_arcagi.yaml
ecology/config/judge_template/: query.txt
ecology/config/judge_template/prompts/: agent_names.txt  eli5_prompt_long.txt  eli5_prompt_short.txt  judge_csv_prompt.txt  judge_summary.txt  judge_summary_prompt.txt  nus_rubric_10pt.txt  nus_rubric_4pt.txt  query_prompt_deep.txt  query_prompt_long.txt  query_prompt_shallow.txt  query_prompt_short.txt
ecology/config/llm_as_judge/prompts/: agent_names.txt  agent_names_caesar.txt  eli5_prompt_long.txt  (+6 more)
ecology/config/role/: self_transcend_insights_v1.txt  self_transcend_role_v2.txt
ecology/config/wikipedia/: single_agent_ai.yaml  single_agent_evo.yaml  single_agent_sci.yaml
monitor/: download_exp.py  kb_server_cli.py  openai_usage.py
rome/: README.md  action.py  action_selector.py  agent.py  agent_api.py  agent_memory.py  base_agent.py  config.py  database.py  executor.py  fsm.py  fsm_factory.py  fsm_selector.py  history.py  kb_client.py  kb_manager.py  kb_server.py  kb_server_cli.py  knowledge.py  knowledge_server.py  llm_handler.py  logger.py  metadata.py  multi_agent.py  openai.py  parsing.py  process.py  repository.py  state.py  tinydb_manager.py  version_manager.py  versioning.py
rome/action/: __init__.py  action.py  advanced_reset_action.py  edit_code_action.py  edit_code_action2.py  edit_test_action.py  edit_test_action2.py  exec_code_action.py  priority_search_action.py  reset_action.py  retry_action.py  revert_code_action.py  save_kb_action.py  search_action.py  search_action_v2.py  tournament_search_action.py  transition_action.py
rome/action/obsolete/: priority_search_action.py
streamlit/: web_app.py
test/: conftest.py  run_tests.sh  test_compressor.py  test_database.py  test_evalplus_agent.py  test_executor.py  test_fsm.py  test_knowledge_base.py  test_llm_handler.py  test_logger.py  test_metadata.py  test_multi_agent.py  test_openai.py  test_parsing.py  test_search.py  test_single_agent.py  test_tinydb_manager.py  test_version_manager.py  test_versioning.py
web_app/: agent_web_app.py  caesar_agent_web_app.py  caesar_human_eval_app.py  ecology_agent_web_app.py  export_caesar_human_eval.py  export_human_eval_results.py  streamlit_app.py  streamlit_run.py
