[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rome"
version = "0.3.3"
authors = [
    {name = "Jason Liang", email = "jasonzliang@gmail.com"},
]
maintainers = [
    {name = "Jason Liang", email = "jasonzliang@gmail.com"},
]
description = "Rome - An AI agent framework for code analysis and execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "code-analysis", "automation", "llm", "machine-learning", "deep-learning"]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/jasonzliang/rome"
Repository = "https://github.com/jasonzliang/rome"
Documentation = "https://github.com/jasonzliang/rome#readme"
"Bug Reports" = "https://github.com/jasonzliang/rome/issues"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.scripts]
rome = "rome.cli:main"
caesar = "rome.caesar_agent:cli_main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["rome", "rome.*"]
exclude = ["test*", "tests*", "benchmark*", "ecology*", "monitor*", "web_app*", "docs*"]

[tool.setuptools.package-data]
rome = ["py.typed", "*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

# Black formatting configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra",
    # Coverage options - comment out if pytest-cov not installed
    # "--cov=rome",
    # "--cov-report=term-missing",
    # "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_api: marks tests that require API access",
]

# Coverage configuration
[tool.coverage.run]
source = ["rome"]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
show_missing = true

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_context = true
show_error_codes = true
show_traceback = true
# Uncomment if using pydantic:
# plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "graphviz.*",
    "ribs.*",
    "xxhash.*",
    "llmlingua.*",
    "mem0ai.*",
    "evalplus.*",
    "portalocker.*",
    "tinydb.*",
    "pygraphviz.*",
    "PyPDF2.*",
]
ignore_missing_imports = true