[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rome"
version = "0.3.3"
authors = [{name = "Augustus Caesar", email = "augustus.caesar@gmail.com"}]
description = "Rome - An AI agent framework for code analysis and execution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agent", "llm", "machine-learning"]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/jasonzliang/rome"
Issues = "https://github.com/jasonzliang/rome/issues"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ipython>=8.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
]

[project.scripts]
rome = "rome.cli:main"
caesar = "rome.caesar_agent:cli_main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["rome", "rome.*"]
exclude = [
    "test*", "benchmark*", "ecology*", "monitor*", "web_app*",
    "__pycache__*", "*.egg-info", ".git*", ".mypy_cache*",
    "rome.action.obsolete*",
]

[tool.setuptools.package-data]
rome = ["py.typed", "*.json", "*.yaml", "*.yml", "*.txt", "**/*.json", "**/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
extend-exclude = 'benchmark|test|ecology|monitor|web_app'

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["*/benchmark/*", "*/test/*", "*/ecology/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra", "--strict-markers"]
markers = ["slow: slow tests", "integration: integration tests"]

[tool.coverage.run]
source = ["rome"]
omit = ["*/test/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "graphviz.*", "ribs.*", "xxhash.*", "llmlingua.*", "mem0ai.*",
    "evalplus.*", "portalocker.*", "tinydb.*", "pygraphviz.*", "PyPDF2.*",
]
ignore_missing_imports = true